Redirects and FormSpree

--- a/_data/navigation_footer.yml
+++ b/_data/navigation_footer.yml
@@ -1,10 +1,7 @@
 # Footer navigation links
 
 - title: Home
-  url: /
-
-- title: Docs
-  url: /docs/
+  url: /docs/welcome/
 
 - title: Contact
   url: /contact/
